Mobile version for Settings Notification Page, Settings Subscription Page, Settings Services catalog Page, Settings Interest Page, Popup Password-recovery, Popup password-pecovery-ok. Script for dragging tabs nav on mobile devices, fix bug with resize slider on Announcements block, Remarkup for Sidemenu search panel, Fix bug in notification dropdown menu in header section

--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ footer .social {
   padding: 25px 0;
   font-size: 15px;
   text-transform: uppercase;
-  color: #0b1f30;
+  color: rgb(11,31,48,0.7);
   font-weight: bold;
 }
 .modal-auth .social{
@@ -1856,10 +1856,10 @@ a.share svg{
 
  
 .form-group input[type="checkbox"]:checked + span:after {
-    -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-       -o-transform: scale(1);
-          transform: scale(1);
+  -webkit-transform: scale(1)  rotate(45deg);
+      -ms-transform: scale(1)  rotate(45deg);
+       -o-transform: scale(1)  rotate(45deg);
+          transform: scale(1)  rotate(45deg);
 }
 .form-group input[type="radio"]:checked + span:after {
     -webkit-transform: scale(1);
@@ -1871,23 +1871,23 @@ a.share svg{
 
 .form-group input[type="checkbox"] + span:after {
   content: "";
-  background: url("../img/check.svg") center no-repeat;
   cursor: pointer;
-  font-style: normal;
-  font-weight: normal;
-  height: 20px;
   left: 0;
-  line-height: 12px;
   position: absolute;
   text-align: center;
   top: -1px;
-  font-size: 9px;
-  -webkit-transform: scale(0);
-      -ms-transform: scale(0);
-       -o-transform: scale(0);
-          transform: scale(0);
-  width: 20px;
+
   background-color: transparent;
+  color: #f05a00;
+  display: block;
+  width: .5em;
+  height: 1em;
+  border-style: solid;
+  border-width: 0 .15em .15em 0;
+  -webkit-transform: scale(0) rotate(45deg);
+  -ms-transform: scale(0) rotate(45deg);
+  -o-transform: scale(0) rotate(45deg);
+  transform: scale(0) rotate(45deg);
 }
 
 .form-group input[type="checkbox"] + span {
@@ -1909,13 +1909,13 @@ a.share svg{
 background-color: #2C3238;
 }
 .form.interest .form-group input[type="checkbox"] + span:after {
-   background-image: url("../img/check-gray.svg");
+  color: #6b7178;
 }
 .modal-interest .form.interest .form-group input[type="checkbox"] + span {
 background-color: #ffffff;
   }
 .modal-interest .form.interest .form-group input[type="checkbox"] + span:after {
-   background-image: url("../img/check.svg");
+   color: #f05a00;
 }
 .form-group input[type="checkbox"]{
   padding-left: 10px;
@@ -2327,7 +2327,6 @@ button.close {
 }
 .form.interest .search-panel {
   padding: 0 0 30px;
-  margin-top: 10px;
   border-bottom: 1px solid rgb(102,111,121,0.7);
 }
 .modal-interest .form.interest .search-panel {
@@ -2397,8 +2396,23 @@ button.close {
 }
 .form.interest .items-lifestyle .form-group-checkbox label {
   height: 197.5px;
-
   }
+.form.interest .list .form-group-checkbox label .img{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;  
+  background-position: center;
+  background-repeat: no-repeat;
+   background-size: cover;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+}
+
 .form.interest .list {
     padding: 0;
   }
@@ -4936,7 +4950,7 @@ top: 0;
   margin-bottom: 5px;
 }
 .widget .side-group .form-group input[type="checkbox"] + span:after {
-   background-image: url("../img/check-gray.svg");
+    color: #6b7178;
 }
 .widget .side-group .form-group label{
   padding-left: 27px;
